Revert "actualizacion nomina"
This reverts commit 082be3a17c661032ff81f10675b71503ecac327d.

--- a/rrhh_14/hr_campos_parametrizacion/report/recibo_vacaciones.xml
+++ b/rrhh_14/hr_campos_parametrizacion/report/recibo_vacaciones.xml
@@ -42,7 +42,7 @@
                         </td>
                       </tr>
                       <tr> 
-                        <td colspan="5" align="left">SUELDO MENSUAL A LA FECHA: <span t-esc="o.float_format(o.sueldo)"/> Bs.</td>
+                        <td colspan="5" align="left">SUELDO MENSUAL: <span t-field="o.employee_id.contract_id.wage"/></td>
                       </tr>
                     </table>
 
