--- a/rrhh_14/hr_campos_parametrizacion/report/recibo_pago_utilidades.xml
+++ b/rrhh_14/hr_campos_parametrizacion/report/recibo_pago_utilidades.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <data> 
-  <record id="paperformat_recibo_nomina" model="report.paperformat">
+  <record id="paperformat_recibo_util" model="report.paperformat">
 
       <field name="default" eval="True"/>
-        <field name="name">Formato Recibo Nomina</field>
+        <field name="name">Formato Recibo Utilidades</field>
         <field name="default" eval="True"/>
         <field name="format">custom</field>
         <field name="page_height">279</field>
@@ -19,7 +19,7 @@
         <field name="dpi">96</field>
     </record>
 
-    <template id="report_recibo_pago">
+    <template id="report_recibo_util">
             <t t-call="web.html_container">
               <t t-foreach="docs" t-as="o">
                 <t t-call="web.basic_layout" >
@@ -32,7 +32,7 @@
                           </t>
                         </td>
                         <td align="right">
-                          Recibo de Pago  xxx
+                          Recibo de Pago de Utilidades
                           <br/>
                           Emisión:&amp;nbsp;&amp;nbsp;
                           <span t-field="o.fecha_hoy"/>
@@ -118,7 +118,7 @@
                           <td align="right"><t t-esc="acum_dedu" t-options='{"widget": "monetary", "display_currency": o.company_id.currency_id}'/></td>
                         </tr>
                         <tr class="table table-bordered" style="font-size:12px;">
-                          <td colspan="2">Periodo del:&amp;nbsp;&amp;nbsp; <span t-field="o.date_from"/>&amp;nbsp;&amp;nbsp; al &amp;nbsp;&amp;nbsp;<span t-field="o.date_to"/>&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;
+                          <td colspan="2">Periodo :&amp;nbsp;&amp;nbsp; <span t-esc="o.ano(o.date_from)"/>&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;
                           Fecha del Pago: &amp;nbsp;&amp;nbsp;<span t-field="o.date_to"/>
                           </td>
                           <td colspan="2"><samp style="font-weight: bolder">NETO A COBRAR Bs.&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;
@@ -148,13 +148,13 @@
                     <t t-call="account.report_invoice_document_with_payments" t-lang="lang"/-->
 
     <report
-            id="payslip_recibo_nom"
+            id="payslip_recibo_util"
             model="hr.payslip"
-            string="Recibo de Pago Nómina"
+            string="Recibo de Pago Utilidades"
             report_type="qweb-pdf"
-            name="hr_campos_parametrizacion.report_recibo_pago"
-            file="hr_campos_parametrizacion.report_recibo_pago"
-            paperformat="paperformat_recibo_nomina"
+            name="hr_campos_parametrizacion.report_recibo_util"
+            file="hr_campos_parametrizacion.report_recibo_utilo"
+            paperformat="paperformat_recibo_util"
         /> <!-- paperformat="paperformat_recibo_nomina" -->
 
         <!--
