--- a/rrhh_14/hr_campos_parametrizacion/report/recibo_pago.xml
+++ b/rrhh_14/hr_campos_parametrizacion/report/recibo_pago.xml
@@ -139,6 +139,13 @@
                         </tr>
                       </table>
                   </div>
+                  <div class="footer">
+                    <div align="center">
+                    <span style="font-size:13px;" >
+                    Quimica para La vida, C.A. * Rif: J-50003269-2 * Calle Alto Hatillo, Torre Q, Oficina 302, Los Naranjos, Caracas * Telf: 0412-0816217
+                    </span>
+                    </div>
+                  </div>
                 </t> 
               </t>
             </t>
