--- a/rrhh_14/hr_campos_parametrizacion/views/hr_payslip_employee_inherit.xml
+++ b/rrhh_14/hr_campos_parametrizacion/views/hr_payslip_employee_inherit.xml
@@ -13,8 +13,8 @@
 
                 </xpath>
                 <xpath expr="//field[@name='structure_id']" position="replace">
-                    <field name="structure_type_id" string="Tipo de Estructura"/>
-                    <field name="structure_id" domain="[('type_id', '=', structure_type_id)]"/>
+                    <field name="structure_type_id" string="Nómina"/>
+                    <field name="structure_id" domain="[('type_id', '=', structure_type_id)]" string="Proceso de Nómina" required="1"/>
                 </xpath>
             </field>
         </record>
