--- a/rrhh_14/hr_infor_resumen_nom/report/reporte_view.xml
+++ b/rrhh_14/hr_infor_resumen_nom/report/reporte_view.xml
@@ -10,12 +10,12 @@
         <field name="page_height">210</field>
         <field name="page_width">297</field>
         <field name="orientation">Portrait</field>
-        <field name="margin_top">35</field>
+        <field name="margin_top">55</field>
         <field name="margin_bottom">15</field>
         <field name="margin_left">5</field>
         <field name="margin_right">5</field>
         <field name="header_line" eval="False"/>
-        <field name="header_spacing">30</field>
+        <field name="header_spacing">50</field>
         <field name="dpi">110</field>
     </record>
 
@@ -38,8 +38,9 @@
               <table width="100%"  border="1">
                 <tr>
                   <td align="left">
+                    
                       <t t-if="o.company_id.logo">  
-                          <img t-attf-src="data:image/*;base64,{{o.company_id.logo}}" style="width:300px; height:auto;"/>
+                          <img t-attf-src="data:image/*;base64,{{o.company_id.logo}}" style="width:auto; height:150px;"/>
                       </t>
                   </td>
                 </tr>
