--- a/loca_14/vat_retention/views/retention_vat_views.xml
+++ b/loca_14/vat_retention/views/retention_vat_views.xml
@@ -54,7 +54,7 @@
                     <div class="oe_title">
                         <span class="o_form_label">Voucher Number</span>
                         <h1>
-                            <field name="name" attrs="{'readonly':[('type', 'in', ('in_invoice','in_refund','in_receipt'))]}"/> 
+                            <field name="name" /> <!--attrs="{'readonly':[('type', 'in', ('in_invoice','in_refund','in_receipt'))]}"/> -->
                         </h1>
                     </div>
 
