--- a/loca_14/isrl_retention/views/retention_vat_views.xml
+++ b/loca_14/isrl_retention/views/retention_vat_views.xml
@@ -33,7 +33,12 @@
                 <sheet>
                     <div class="oe_title">
                         <span class="o_form_label">Comprobante  Número</span>
-                        <h1><field name="name" attrs="{'readonly': [('type', 'in', ('in_invoice','in_refund','in_receipt'))]}" /></h1>
+                        
+                        <!-- <h1><field name="name" attrs="{'readonly': [('type', 'in', ('in_invoice','in_refund','in_receipt'))]}" /></h1> -->
+
+                        <h1>
+                            <field name="name" /> 
+                        </h1>
                     </div>
                     <group>
                         <group>
